--- a/_config.yml
+++ b/_config.yml
@@ -140,17 +140,17 @@ navbar-var-length: true
 # footer-link-col: "#404040"
 # footer-hover-col: "#0085A1"
 
-navbar-col: "#000000"
-navbar-text-col: "#000000"
+navbar-col: "#121212"
+navbar-text-col: "#FFFFFF"
 navbar-border-col: "#000000"
-page-col: "#000000"
+page-col: "#181818"
 text-col: "#FFFFFF"
 link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#000000"
+hover-col: "#007ACC"
+footer-col: "#121212"
 footer-text-col: "#FFFFFF"
 footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
+footer-hover-col: "#007ACC"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
@@ -160,7 +160,7 @@ footer-hover-col: "#0085A1"
 #page-img: "/assets/img/bgimage.png"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
-#mobile-theme-col: "#0085A1"
+mobile-theme-col: "#007ACC"
 
 # For any extra visual customization, you can include additional CSS files in every page on your site. List any custom CSS files here
 #site-css:
