Edit permalink in _config.yml Add categories for using permalink and fix some typo in a post

--- a/_config.yml
+++ b/_config.yml
@@ -267,7 +267,8 @@ date_format: "%B %-d, %Y"
 timezone: "Asia/Seoul"
 markdown: kramdown
 highlighter: rouge
-permalink: /:year-:month-:day-:title/
+# permalink: /:year-:month-:day-:title/
+permalink: /:categories/:title/
 paginate: 5
 
 kramdown:
