--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ title: Lim's Blog
 
 # Your name to show in the footer
 author: Lim
+url: "https://namjatiffk.github.io"
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -175,7 +176,7 @@ mobile-theme-col: "#007ACC"
 #################################
 
 # Fill in your Google Analytics tag ID (or "Measurement ID") to track your website usage
-#gtag: "G-XXXXXXXXXX"
+gtag: "G-XB5V1X4MRG"
 
 # Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
 #cloudflare_analytics: ""
